--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@
   * Outline Elements
 */
 
-* {
+/* * {
     outline: 1px dotted black;
+} */
+
+video {
+  border: 10px solid black;
+  /* Kludge */
+  width: 100%;
+  height: 100%;
 }
