--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@
 } */
 
 video {
-  border: 10px solid black;
+  /* border: 10px solid black; */
   /* Kludge */
   width: 100%;
   height: 100%;
+  padding: 50px 0px 50px 0px;
 }
