Cast names on hover.

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,41 @@ img {
   align-self: center;
 }
 
+.hover {
+  position: relative;
+}
+  
+.hover .hover-opacity {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 15px;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -ms-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+  
+.hover:hover .hover-opacity {
+  opacity: 1;
+}
+  
+.hover-text {
+  display: inline-block;
+  position: absolute;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}  
+
 /* FOOTER */
 footer {
   background: #80808060;
